@@ -114,7 +114,14 @@ extern  "C" {
   NFC_EXPORT void iso14443a_crc (uint8_t *pbtData, size_t szLen, uint8_t *pbtCrc);
   NFC_EXPORT void iso14443a_crc_append (uint8_t *pbtData, size_t szLen);
   NFC_EXPORT uint8_t *iso14443a_locate_historical_bytes (uint8_t *pbtAts, size_t szAts, size_t *pszTk);
+
   NFC_EXPORT const char *nfc_version (void);
+  NFC_EXPORT int nfc_device_get_information_about (nfc_device *pnd, char *buf, size_t buflen);
+
+/* String converter functions */
+  NFC_EXPORT const char * str_nfc_modulation_type (const nfc_modulation_type nmt);
+  NFC_EXPORT const char * str_nfc_baud_rate (const nfc_baud_rate nbr);
+
 
 /* Error codes */
 /** @ingroup error
