@@ -492,10 +492,11 @@ const struct nfc_driver acr122_pcsc_driver = {
   .target_send_bits      = pn53x_target_send_bits,
   .target_receive_bits   = pn53x_target_receive_bits,
 
-  .device_set_property_bool  = pn53x_set_property_bool,
-  .device_set_property_int   = pn53x_set_property_int,
-  .get_supported_modulation = pn53x_get_supported_modulation,
-  .get_supported_baud_rate = pn53x_get_supported_baud_rate,
+  .device_set_property_bool     = pn53x_set_property_bool,
+  .device_set_property_int      = pn53x_set_property_int,
+  .get_supported_modulation     = pn53x_get_supported_modulation,
+  .get_supported_baud_rate      = pn53x_get_supported_baud_rate,
+  .device_get_information_about = pn53x_get_information_about,
 
   .abort_command  = NULL,  // FIXME: abort is not supported in this driver
   .idle  = NULL,           // FIXME: idle is not supported in this driver
