@@ -3,6 +3,7 @@
  * 
  * Copyright (C) 2009, Roel Verdult
  * Copyright (C) 2010, Romuald Conty, Romain Tartière
+ * Copyright (C) 2011-2012, Romuald Conty
  * 
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -103,10 +104,16 @@ main (int argc, const char *argv[])
   }
 
   printf ("%d NFC device(s) found:\n", (int)szDeviceFound);
+  char strinfo[1024];
   for (i = 0; i < szDeviceFound; i++) {
     pnd = nfc_open (NULL, connstrings[i]);
     if (pnd != NULL) {
       printf ("- %s:\n    %s\n", nfc_device_get_name (pnd), nfc_device_get_connstring (pnd));
+      if (verbose) {
+        if (nfc_device_get_information_about (pnd, strinfo, sizeof(strinfo)) >= 0) {
+          printf ("%s", strinfo);
+        }
+      }
       nfc_close (pnd);
     }
   }
